# draftsman

./: CMakeLists.txt  README.md
data/: features.json  projects.json  shell_layout.json  ui_theme.json
data/binder_templates/: repo_default_binder_v1.json
docs/: AGENT_EDITING.md  BUILDER_SIGNOFF.md  DRAFTSMAN_CODE_BRIEF.md
docs/examples/: rabbit_hole_review_fixture.json  repo_knowledge_shell_layout.json
docs/features/: text_editor_workbench_salvage.md  text_editor_workbench_todos.md
docs/schemas/: features.schema.json  shell_layout.schema.json  ui_theme.schema.json
qt_qml_region_split/: .gitignore  CMakeLists.txt  README.md  Run Draftsman Drawing Tool.command
qt_qml_region_split/app/: main.cpp
qt_qml_region_split/data/: design_principles.json  shell_layout.json  shell_surface_map.json  ui_theme.json
qt_qml_region_split/data/features/drawing_tool/: metadata_presets.json  metadata_presets_game_guy.json  tool_registry.json
qt_qml_region_split/data/maps/game_guy/: starter_cells.jsonl  starter_grid.csv
qt_qml_region_split/data/project_profiles/: draftsman_blank.json  draftsman_drawing_tool_blank.json  draftsman_game_guy_drawing_tool.json  draftsman_game_guy_map_editor.json  draftsman_text_editor.json  draftsman_ui_taxonomy.json
qt_qml_region_split/data/review_notes/: draftsman_ui_taxonomy_notes.json
qt_qml_region_split/data/review_subjects/: draftsman_ui_taxonomy.json
qt_qml_region_split/data/text_editor/: documents.json
qt_qml_region_split/data/text_editor/docs/: draft-2.txt  scratch.txt
qt_qml_region_split/docs/: TODO.md  architecture.md  baseline_audit.md  codex_integration_order.md  coding_methods.md  design_philosophy.md  project_profile_contract.md  reusable_shell_contract.md  right_inspector_contract.md  surface_contract.md  ui_taxonomy.md  visual_organization_contract.md
qt_qml_region_split/docs/features/: drawing_tool_visual_contract.md
qt_qml_region_split/docs/import_ledgers/: pattern_lab_drawing_tool_import_v0.md
qt_qml_region_split/docs/proof/: README.md
qt_qml_region_split/docs/refactor/: large_file_refactor_plan_v0.md
qt_qml_region_split/docs/work_orders/: csv_map_editor_integration.md  drawing_tool_blank_profile.md  feature_integration_template.md  text_editor_qml_profile.md
qt_qml_region_split/scripts/: capture_proof.sh  run_drawing_tool.sh  validate_csv_map_editor.js  validate_design_principles.js  validate_export_packet.js  validate_project_profiles.js  validate_review_subjects.js  validate_shell_layout.js  validate_shell_surface_map.js  validate_text_editor_documents.js  validate_ui_theme.js
qt_qml_region_split/src/: Main.qml
qt_qml_region_split/src/components/: UiBreadcrumb.qml  UiButton.qml  UiCodeRefRow.qml  UiIconButton.qml  UiInspectorAction.qml  UiInspectorRow.qml  UiListRow.qml  UiMenuButton.qml  UiNoteCard.qml  UiPanel.qml  UiPanelToggleButton.qml  UiRouteCard.qml  UiSectionHeader.qml  UiSplitterHandle.qml  UiStatusChip.qml  UiTab.qml  UiTextArea.qml  UiTextField.qml  UiToggle.qml
qt_qml_region_split/src/core/: DrawingCore.cpp  DrawingCore.h
qt_qml_region_split/src/features/blank/: BlankPanel.qml  BlankWorkspace.qml
qt_qml_region_split/src/features/csv_map_editor/: CsvMapEditorBottomPanel.qml  CsvMapEditorLeftNav.qml  CsvMapEditorRightContext.qml  CsvMapEditorWorkspace.qml
qt_qml_region_split/src/features/drawing_tool/: DrawingCanvasNavigationRenderer.qml  DrawingCanvasObjectRenderer.qml  DrawingCanvasPreviewRenderer.qml  DrawingCanvasSnapResolver.qml  DrawingToolBottomPanel.qml  DrawingToolLeftPanel.qml  DrawingToolRightContext.qml  DrawingToolWorkspace.qml
qt_qml_region_split/src/features/inspector/: RightInspector.qml
qt_qml_region_split/src/features/review_gate/: README.md
qt_qml_region_split/src/features/settings/: PanelsSettingsPage.qml  SettingsLeftNav.qml  SettingsRightContext.qml  ThemeSettingsWorkspace.qml
qt_qml_region_split/src/features/text_editor/: TextEditorBottomPanel.qml  TextEditorLeftPanel.qml  TextEditorRightContext.qml  TextEditorWorkspace.qml
qt_qml_region_split/src/features/ui_taxonomy/: ReviewBreadcrumb.qml  ReviewCodeRefs.qml  ReviewCommentThread.qml  ReviewLeftNav.qml  ReviewRightContext.qml  ReviewRouteCards.qml  ReviewStatusPanel.qml  UiTaxonomyFocusPanel.qml  UiTaxonomyInspector.qml  UiTaxonomyWorkspace.qml
qt_qml_region_split/src/panels/bottom/: README.md
qt_qml_region_split/src/panels/center/: README.md
qt_qml_region_split/src/panels/left/: README.md
qt_qml_region_split/src/panels/right/: README.md
qt_qml_region_split/src/regions/: ActivityRail.qml  BottomPanel.qml  LeftPanel.qml  MainWorkspace.qml  RightPanel.qml  StatusBar.qml  WindowTitleBar.qml  WindowTitleBarToolbar.qml
qt_qml_region_split/src/runtime/: DrawingCanvasHitTest.js  DrawingRuntimeRows.js  DrawingSession.qml  DrawingToolCatalog.js  FeatureRegistry.qml  MapSession.qml  NavigationState.qml  ReviewSession.qml  RuntimeController.qml  TextEditorSession.qml
qt_qml_region_split/src/style/: UiStyle.qml  qmldir
qt_qml_region_split/tests/: drawing_core_smoke.cpp
scripts/: validate_features.py  validate_shell_layout.py  validate_ui_theme.py
src/: README.md  agent_binder_pages.h  agent_context_renderer.cpp  agent_context_renderer.h  agent_empty_state.cpp  agent_empty_state.h  agent_evidence_pages.cpp  agent_grade_pages.cpp  agent_profile_pages.cpp  agent_relationship_pages.cpp  agent_stats_pages.cpp  agent_transcript_pages.cpp  app_state.h  app_state_helpers.h  app_state_records.h  binder_json_helpers.h  binder_navigation.cpp  binder_navigation.h  binder_page_helpers.cpp  binder_page_helpers.h  binder_profile_state.h  binder_record_state.cpp  binder_record_state.h  binder_state.h  binder_stats_state.cpp  binder_stats_state.h  binder_stats_widgets.cpp  chrome_title_bar.cpp  chrome_title_bar.h  detail_lens_rail.cpp  detail_lens_rail.h  feature_registry.h  feature_registry_parse.cpp  feature_registry_store.cpp  feature_routing.cpp  feature_routing.h  feature_settings_page.cpp  feature_settings_page.h  ledger_view.h  main.cpp  (+113 more)
src/runtime/: ProjectSession.qml
tests/: state_backend_smoke.cpp
(+6 files in other folders)
